--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 class = "title">Tangerine Orange Key: <b>45427746S1</b></h3>
+            <h1 class = "title">Tangerine Orange Key: <b>45427746S1</b></h1>
             <p class="text-center"><i class="material-icons green" >check_circle</i> Working | Last Updated: Today</p>
             <br><br>
-            <p>Follow the steps to get bonus $50:</p>
+            <h2 class="steps">Follow the steps to get bonus $50:</h2>
             <ul class="demo-list-three mdl-list">
               <li class="mdl-list__item mdl-list__item--three-line">
                 <span class="mdl-list__item-primary-content">
