--- a/index.html
+++ b/index.html
@@ -122,5 +122,25 @@
      ga('create', 'UA-55905324-2', 'auto');
      ga('send', 'pageview');
     </script>
+    <script type="application/ld+json">
+      {
+      "@context": "http://schema.org/",
+      "@type": "Review",
+      "itemReviewed": {
+        "@type": "Thing",
+        "name": "Orange Key"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Jimmy"
+      },
+      "datePublished": "2016-11-22",
+      "reviewRating": {
+        "@type": "Rating",
+        "description": "Worked perfectly highly recommended.",
+        "ratingValue": "5"
+      }
+      }
+    </script>
   </body>
 </html>
